lm-labs-webapp/src/main/resources/skin/resources/less/theme/labs/specific.less
@import "../../bootstrap/bootstrap.less";
@import "../tablesorter.less";
@import "../labs-fixed.less";

@navbarHeight:          30px;
@baseFontSize:          13px;
@baseLineHeight:        18px;

@baseFontColorTitleH1: @textColor;
@basefontTitleH5: 12px; // to be able to use this variable in labs.less

[class*="span"] {
    margin-left: 5px;
}

html>body {
  background-image: ~"url('@{skinPath}/images/theme/bg.jpg');"
}


#masthead {
   margin-top: -18px;
}

#FKtopContent {
  background-color: white;
  .box-shadow(1px 1px 1.2em #555);
  margin-bottom: 1.5em;
}

#FKfooter {
  color: #0087C0;
}

.rss-feed-list, .recentActivities {
  .browseLastMsg .prev {
    border: 1px solid #AAAAEE;
    border-color: #999999;
    margin-right: 5px;
      padding: 1px 4px;
  }
  .browseLastMsg .next {
    border: 1px solid #AAAAEE;
    border-color: #999999;
    margin-right: 5px;
      padding: 1px 4px;
  }
  .browseLastMsg .prev:hover {
    background-color:#ABD7FE;
  }
  .browseLastMsg .next:hover {
    background-color:#ABD7FE;
  }
  .browseLastMsg .current:hover {
    background-color:white;
  }
  a {
    color: #404040;
      font-size: @baseFontSize;
      font-weight: normal;
      line-height: 18px;
  }
}

/*Override for GWTContainer*/
.breadcrumb {
  a {
    color: @linkColor !important;
  }
  .active a {
    color: @gray !important;
    font-style:italic;
  }
}

/*Override for GWTContainer*/
.navbar div > ul,
.nav {
  a {
    color: @grayLight;
    }
}


.container-fluid {
  padding-left: 10px;
    padding-right: 10px;
    > .sidebar {
      width: 180px;
    }
    > .container {
      position: relative;
      float: right;
      width: 760px;
    }
}

/*.container{
  width: auto;
  margin-left: 10px;
  margin-right: 5px;
}*/

.bloc.external-links, #latestuploads{
  > ul {
    margin-bottom: 2px;
    > li {
      word-wrap: break-word;
    }
  }
}

.navbar{
    margin-bottom: 0;
  z-index: 100;
  // Website or project name
    .brand {
      padding: 0;
      padding-top : 4px
    }
    input {
      background-color: #444;
      background-color: rgba(255,255,255,.3);
      #font > .sans-serif(13px, normal, 1);
      padding: 1px 9px;
      color: @white;
      color: rgba(255,255,255,.75);
      border: 1px solid #111;
      .border-radius(4px);
      @shadow: inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0px rgba(255,255,255,.25);
      .box-shadow(@shadow);
      .transition(none);

      // Placeholder text gets special styles; can't be bundled together though for some reason
      &:-moz-placeholder {
        color: @grayLighter;
      }
      &::-webkit-input-placeholder {
        color: @grayLighter;
      }
      // Hover states
      &:hover {
        background-color: @grayLight;
        background-color: rgba(255,255,255,.5);
        color: @white;
      }
      // Focus states (we use .focused since IE8 and down doesn't support :focus)
      &:focus,
      &.focused {
        outline: 0;
        background-color: @white;
        color: @grayDark;
        text-shadow: 0 1px 0 @white;
        //border: 0;
        padding: 1px 9px;
        .box-shadow(0 0 3px rgba(0,0,0,.15));
      }
   }
}

.navbar-search .search-query {
  padding: 0;
}

.navbar-inner{
    height: @navbarHeight;
    .border-radius(0);
}

.navbar-form input, .navbar-form .btn {
  //margin-bottom: 0;
  padding: 1px 9px;
}

.navbar .nav > li > a {
  padding: 0;
  padding-top: 4px;
  margin-right: -10px;
}

// Inverted navbar
// -------------------------

.navbar {

  .navbar-inner {
    #gradient > .vertical(@navbarInverseBackgroundHighlight, @navbarInverseBackground);
    border-color: @navbarInverseBorder;
  }

  .brand,
  .nav > li > a {
    color: @navbarInverseLinkColor;
    text-shadow: 0 -1px 0 rgba(0,0,0,.25);
    &:hover {
      color: @navbarInverseLinkColorHover;
    }
  }

  .brand {
    color: @navbarInverseBrandColor;
  }

  .navbar-text {
    color: @navbarInverseText;
  }

  .nav > li > a:focus,
  .nav > li > a:hover {
    background-color: @navbarInverseLinkBackgroundHover;
    color: @navbarInverseLinkColorHover;
  }

  .nav .active > a,
  .nav .active > a:hover,
  .nav .active > a:focus {
    color: @navbarInverseLinkColorActive;
    background-color: @navbarInverseLinkBackgroundActive;
  }

  // Inline text links
  .navbar-link {
    color: @navbarInverseLinkColor;
    &:hover {
      color: @navbarInverseLinkColorHover;
    }
  }

  // Dividers in navbar
  .divider-vertical {
    border-left-color: @navbarInverseBackground;
    border-right-color: @navbarInverseBackgroundHighlight;
  }

  // Dropdowns
  .nav li.dropdown.open > .dropdown-toggle,
  .nav li.dropdown.active > .dropdown-toggle,
  .nav li.dropdown.open.active > .dropdown-toggle {
    background-color: @navbarInverseLinkBackgroundActive;
    color: @navbarInverseLinkColorActive;
  }
  .nav li.dropdown > a:hover .caret {
    border-top-color: @navbarInverseLinkColorActive;
    border-bottom-color: @navbarInverseLinkColorActive;
  }
  .nav li.dropdown > .dropdown-toggle .caret {
    border-top-color: @navbarInverseLinkColor;
    border-bottom-color: @navbarInverseLinkColor;
  }
  .nav li.dropdown.open > .dropdown-toggle .caret,
  .nav li.dropdown.active > .dropdown-toggle .caret,
  .nav li.dropdown.open.active > .dropdown-toggle .caret {
    border-top-color: @navbarInverseLinkColorActive;
    border-bottom-color: @navbarInverseLinkColorActive;
  }

  // Navbar search
  .navbar-search {
    .search-query {
      color: @white;
      background-color: @navbarInverseSearchBackground;
      border-color: @navbarInverseSearchBorder;
      .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
      .transition(none);
      .placeholder(@navbarInverseSearchPlaceholderColor);

      // Focus states (we use .focused since IE7-8 and down doesn't support :focus)
      &:focus,
      &.focused {
        padding: 5px 15px;
        color: @grayDark;
        text-shadow: 0 1px 0 @white;
        background-color: @navbarInverseSearchBackgroundFocus;
        border: 0;
        .box-shadow(0 0 3px rgba(0,0,0,.15));
        outline: 0;
      }
    }
  }

  // Navbar collapse button
  .btn-navbar {
    .buttonBackground(darken(@navbarInverseBackgroundHighlight, 5%), darken(@navbarInverseBackground, 5%));
  }

}

